# Project-UberApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  msan_ignore.txt  tastatura.txt
cmake/: CustomStdlibAndSanitizers.cmake
include/: App.h  Car.h  CarFactory.h  ComfortCar.h  Driver.h  ElectricCar.h  Location.h  Menu.h  Ride.h  RideManager.h  StandardCar.h  User.h
src/: App.cpp  Car.cpp  CarFactory.cpp  ComfortCar.cpp  Driver.cpp  ElectricCar.cpp  Location.cpp  Menu.cpp  Ride.cpp  RideManager.cpp  StandardCar.cpp  User.cpp
test/: cars_test.cpp  driver_test.cpp  rideManager.cpp
